Adding licensing headers to all js files.
Refactored webpack build, Readme additions, organized assets, linted code, etc.

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -89,9 +89,8 @@ typings/
 
 package-lock.json
 
-#Bundled Code
-dist/bundle.js
-dist/bundle.js.map
+#Dist folder
+dist/
 
 #lint config
 .eslintrc.json
