--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,8 @@
     "@typescript-eslint/parser": "^2.6.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^6.6.0",
@@ -29,10 +31,12 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
     "typescript": "^3.6.4",
+    "url-loader": "^2.2.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack-pwa-manifest": "^4.1.1"
   },
   "dependencies": {}
 }
