--- a/web/src/manifest.json
+++ b/web/src/manifest.json
@@ -14,27 +14,27 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/android/android-launchericon-144-144.png",
+            "src": "./assets/icons/android-launchericon-144-144.png",
             "sizes": "144x144"
         },
         {
-            "src": "icons/android/android-launchericon-192-192.png",
+            "src": "./assets/icons/android-launchericon-192-192.png",
             "sizes": "192x192"
         },
         {
-            "src": "icons/android/android-launchericon-48-48.png",
+            "src": "./assets/icons/android-launchericon-48-48.png",
             "sizes": "48x48"
         },
         {
-            "src": "icons/android/android-launchericon-512-512.png",
+            "src": "./assets/icons/android-launchericon-512-512.png",
             "sizes": "512x512"
         },
         {
-            "src": "icons/android/android-launchericon-72-72.png",
+            "src": "./assets/icons/android-launchericon-72-72.png",
             "sizes": "72x72"
         },
         {
-            "src": "icons/android/android-launchericon-96-96.png",
+            "src": "./assets/icons/android-launchericon-96-96.png",
             "sizes": "96x96"
         }
     ]
