--- a/web/package.json
+++ b/web/package.json
@@ -29,10 +29,12 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
     "typescript": "^3.6.4",
+    "url-loader": "^2.2.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack-pwa-manifest": "^4.1.1"
   },
   "dependencies": {}
 }
