remove tarball dependancy

--- a/web/package.json
+++ b/web/package.json
@@ -13,12 +13,13 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@microsoft/mgt": "file:microsoft-mgt-1.0.0.tgz",
+    "@microsoft/mgt": "^1.1.0-preview.2",
     "@microsoft/teams-js": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^6.6.0",
