--- a/web/package.json
+++ b/web/package.json
@@ -2,15 +2,15 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "dist/app.js",
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src",
-    "bundle": "webpack",
-    "start": "webpack-dev-server"
+    "build:js": "babel dist",
+    "bundle": "webpack --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,28 +22,31 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-typescript": "^7.3.3",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "css-loader": "^3.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "path": "^0.12.7",
-    "style-loader": "^1.0.0",
-    "typescript": "^3.3.3",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.1",
     "@microsoft/mgt": "file:microsoft-mgt-1.0.0.tgz",
     "@microsoft/teams-js": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.4.1",
+    "css-loader": "^3.2.0",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^6.6.0",
     "file-loader": "^4.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
+    "regenerator-runtime": "^0.13.3",
     "sass": "^1.22.9",
     "sass-loader": "^7.1.0",
+    "style-loader": "^1.0.0",
+    "typescript": "^3.3.3",
     "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.1",
     "webpack-pwa-manifest": "^4.1.1"
   },
   "dependencies": {}
