--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.5",
     "core-js": "^3.4.1",
     "css-loader": "^3.2.0",
     "dotenv-webpack": "^1.7.0",
