cookie variables sessions

--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@microsoft/mgt": "^1.1.0-preview.2",
     "@microsoft/teams-js": "^1.5.0",
+    "@types/js-cookie": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "babel-loader": "^8.0.6",
@@ -37,6 +38,7 @@
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "js-cookie": "^2.2.1",
     "path": "^0.12.7",
     "regenerator-runtime": "^0.13.3",
     "sass": "^1.22.9",
