--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "js-cookie": "^2.2.1",
+    "local-storage": "^2.0.0",
     "path": "^0.12.7",
     "regenerator-runtime": "^0.13.3",
     "sass": "^1.22.9",
